// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when should not update 1`] = `
<FadeTransition
  in={false}
  timeout={200}
>
  <section
    className="src-modules-app-updater-index__container"
  >
    <p
      className="src-modules-app-updater-index__message"
    >
      <strong>
        A new version of the app is available!
      </strong>
        Click the Update button to reload the page and update.
    </p>
    <Button
      onClick={[Function]}
      type="submit"
    >
      Update
    </Button>
  </section>
</FadeTransition>
`;

exports[`should render correctly when should update 1`] = `
<FadeTransition
  in={true}
  timeout={200}
>
  <section
    className="src-modules-app-updater-index__container"
  >
    <p
      className="src-modules-app-updater-index__message"
    >
      <strong>
        A new version of the app is available!
      </strong>
        Click the Update button to reload the page and update.
    </p>
    <Button
      onClick={[Function]}
      type="submit"
    >
      Update
    </Button>
  </section>
</FadeTransition>
`;
